css - background done, need to fix spacing in weather container and image

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,81 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightgrey;
-    /* background-image: url(`https://unsplash.com/photos/-6i6a23H5Ho`); */
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    background-image: url(https://images.unsplash.com/photo-1419833173245-f59e1b93f9ee?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+  }
+
+.h1 {
+    font-size: 10px;
+}
+
+/* Weather */
+.weather-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+    text-align: center;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 20px;
+    padding-bottom: 30px;
+    width: 65%;
+  }
+
+.weather-input {
+    margin: 10px;
+    border: 0;
+    border-bottom: solid 1px #f16051;
+    padding-bottom: 4px;
+    color: white !important;
+    font-size: 16px;
+    background-color: transparent;
+    outline: none;
+}
+
+.weather-input-button {
+    margin: 10px;
+    border: 0;
+    padding-bottom: 4px;
+    color: black !important;
+    font-size: 16px;
+    outline: none;
+}
+
+input::placeholder {
+    color: white;
+}
+
+/* Weather Text/Icon */
+.weather__key {
+    /* padding: 20px 0 20px 0; */
+    font-size: 24px;
+  }
+
+.weather-icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
+/* Background - unsplash */
+.image {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
 }
